# openconstruct-jupyter

./: .gitignore  README.md  pyproject.toml
openconstruct_jupyter/: __init__.py  display.py  fleet_panel.py  kernel.py  magic.py  room_viewer.py  widgets.py
openconstruct_jupyter/examples/: 01-quickstart.ipynb  02-sense-modules.ipynb  03-fleet-discovery.ipynb  04-plato-rooms.ipynb  05-custom-module.ipynb
tests/: test_magic.py
