[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconstruct-jupyter"
version = "0.1.0"
description = "Jupyter notebook integration for OpenConstruct — connect, sense, and build with agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "SuperInstance" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ipython>=7.0",
    "ipywidgets>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.entry-points."IPython.kernel"]
openconstruct = "openconstruct_jupyter.magic:load_ipython_extension"

[tool.setuptools.packages.find]
include = ["openconstruct_jupyter*"]
